--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
   list-style: circle;
 }
 
-.header__links-list-item_no-bullit {
+.header__links-list-item_active {
   list-style: none;
 }
 
@@ -54,20 +54,17 @@
   line-height: 1.35;
 }
 
-.header__address_tel {
+.address__link {
   text-decoration: none;
   border-bottom: 1px solid black;
 }
 
-.header__address_mail {
-  text-decoration: none;
-  border-bottom: 1px solid black;
-}
 .cover {
   position: relative;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   z-index: 0;
+  background-position: center;
 }
 
 .overlay {
@@ -91,7 +88,7 @@
   padding: 165px 50px 125px;
 }
 
-.cover__title_text {
+.cover__title-text {
   letter-spacing: 30px;
 }
 
@@ -107,11 +104,11 @@
   display: block;
 }
 
-.aligned-text_center {
+.aligned-text-center {
   text-align: center;
 }
 
-.aligned-text_right {
+.aligned-text-right {
   text-align: end;
 }
 
@@ -136,7 +133,8 @@
 
 .bet-button {
   width: 257px;
-  height: 52px;
+  min-height: 52px;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   background-color: transparent;
   color: #fff;
   text-align: center;
@@ -147,6 +145,7 @@
   text-transform: uppercase;
   border: 1px solid #fff;
   padding: 0;
+  cursor: pointer;
 }
 
 .lots {
@@ -174,35 +173,30 @@
   display: block;
   text-decoration: none;
   max-width: 430px;
-  height: 450px;
 }
 
 .card {
   display: flex;
   flex-direction: column;
+  min-height: 450px;
   justify-content: space-between;
   position: relative;
   max-width: 100%;
   height: 100%;
-  z-index: -1;
+  background-size: cover;
+  z-index: 0;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-size: cover;
-  z-index: -1;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-size: cover;
-  z-index: -1;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-size: cover;
-  z-index: -1;
 }
 
 .card__title {
@@ -251,7 +245,7 @@
   grid-template-rows: 1fr;
   gap: 0 25px;
 }
-.about__logo_container {
+.about__logo-container {
   display: flex;
   justify-content: center;
 }
@@ -276,7 +270,6 @@
 }
 .about__title {
   color: #000;
-  font-family: Raleway;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -288,7 +281,7 @@
   flex-direction: column;
   gap: 25px;
 }
-.about__text_content {
+.about__text-content {
   color: #000;
   font-size: 20px;
   font-style: normal;
@@ -299,21 +292,7 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  padding: 183px 50px 0 50px;
-}
-
-.footer__address {
-  display: flex;
-}
-
-.footer__address_tel {
-  text-decoration: none;
-  border-bottom: 1px solid black;
-}
-
-.footer__address_mail {
-  text-decoration: none;
-  border-bottom: 1px solid black;
+  padding: 183px 50px 90px 50px;
 }
 
 .footer__menu {
