--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,10 @@
   list-style: circle;
 }
 
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
 .header__links-list-item_active {
   list-style: none;
 }
